# serde_cbored

./: Cargo.toml  LICENSE  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
src/serde/: common.rs  mod.rs  ser.rs
